--- a/Tasks.RunSettings/Tasks.RunSettings/Tasks.RunSettings.csproj
+++ b/Tasks.RunSettings/Tasks.RunSettings/Tasks.RunSettings.csproj
@@ -1,26 +1,16 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>Linkoid.Build.Tasks.RunSettings</AssemblyName>
     <RootNamespace>Linkoid.Build.Tasks.RunSettings</RootNamespace>
-    <LangVersion>12</LangVersion>
-    <Nullable>enable</Nullable>
+    <IsPackable>true</IsPackable>
   </PropertyGroup>
 
   <PropertyGroup>
-    <VersionPrefix>1.0.0</VersionPrefix>
-    <Authors>linkoid</Authors>
+    <VersionPrefix>1.0.1</VersionPrefix>
     <Description>Provides MSBuild tasks for generating .runsettings files</Description>
-    <PackageReadmeFile>README.md</PackageReadmeFile>
-    <RepositoryUrl>https://github.com/linkoid/Build.Tasks.RunSettings</RepositoryUrl>
     <IncludeBuildOutput>false</IncludeBuildOutput>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
-  
-  <ItemGroup>
-    <None Include="..\README.md" Pack="true" PackagePath="/" />
-  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Build.Utilities.Core" Version="16.11.0" PrivateAssets="all" />
