--- a/ProjectAsPackageReference/ProjectAsPackageReference/ProjectAsPackageReference.csproj
+++ b/ProjectAsPackageReference/ProjectAsPackageReference/ProjectAsPackageReference.csproj
@@ -5,6 +5,7 @@
     <RootNamespace>Linkoid.Build.ProjectAsPackageReference</RootNamespace>
     <IsPackable>true</IsPackable>
     <PackageType>MSBuildSdk</PackageType>
+    <Description>Allows using a project as a package reference.</Description>
   </PropertyGroup>
 
   <ItemGroup>
