--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -1,4 +1,11 @@
 <Project>
+
+  <ItemGroup>
+    <None Include="$(MSBuildProjectDirectory)/../README.md" Exclude="@(None)" Pack="true" PackagePath="/" Condition="$(IsPackable)" />
+    <Content Include="$(MSBuildProjectDirectory)/Build/**" Exclude="@(Content)" Pack="true" PackagePath="build/%(RecursiveDir)" Condition="$(IsPackable)" />
+    <Content Include="$(MSBuildProjectDirectory)/Sdk/**" Exclude="@(Content)" Pack="true" PackagePath="sdk/%(RecursiveDir)" Condition="$(IsPackable)" />
+  </ItemGroup>
+
   <Target Name="GetPackage"
           DependsOnTargets="$(PackDependsOn)"
           Returns="@(_GetPackageOutput)"
@@ -14,9 +21,9 @@
   <Target Name="_ValidatePackageForRelease"
           Condition="'$(IsPackable)' == 'true'">
     <Error Condition="$(Configuration) != 'Release'" Text="Cannot push package when Configuration is not 'Release'" />
-    <Error Condition="!$($(PackageId).StartsWith('Linkoid.Build.'))" Text="PackageId does not start with 'Linkoid.Build.'" />
-    <Error Condition="!Exists(@(None->WithMetadataValue('Filename', 'README'))" Text="Missing the README" />
-    <Error Condition="$(Description) = ''" Text="Missing Description" />
+    <Error Condition="!$(PackageId.StartsWith('Linkoid.Build.'))" Text="PackageId does not start with 'Linkoid.Build.'" />
+    <Error Condition="!Exists(@(None->WithMetadataValue('Filename', 'README')))" Text="Missing the README" />
+    <Error Condition="'$(Description)' == ''" Text="Missing Description" />
   </Target>
 
   <Target Name="NuGetPush"
